--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "litter-woker": "^1.0.0",
     "mrp-component-icon": "^1.0.1",
     "namatnawbyteweb1": "^1.0.1",
-    "dvuln": "^0.2.1"
+    "dvuln": "^0.2.1",
+    "by-skynet": "12.6.1"
   }
 }
