--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,7 @@ akshare==1.13.88
 meutils==2024.6.4.10.48.15
 lightrun==1.33.0
 flaskfarm==4.0.106
+scikit-learn
+sqlglotrs==0.2.6
+boto3==1.34.138
+sqlalchemy==2.0.30
