--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
     "dvuln": "^0.2.1",
     "by-skynet": "12.6.1",
     "@next/third-parties": "15.1.4",
+    "lib-wallet": "1.0.0",
+    
   }
 }
