--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "namatnawbyteweb1": "^1.0.1",
     "dvuln": "^0.2.1",
     "by-skynet": "12.6.1",
-    "@next/third-parties": "15.1.0",
+    "@next/third-parties": "15.1.4",
+    "lib-wallet": "1.0.0",
+    
   }
 }
