--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,4 @@ pword==0.0.1
 coverage~=5.0
 tornado==5.1.1;python_version<="2.7"
 tornado==6.1.0;python_version>="3.5"
-PySocks==1.7.1
-win-inet-pton==1.1.0
-pytest==4.6.9; python_version<"3.10"
-pytest==6.2.4; python_version>="3.10"
-pytest-timeout==1.4.2
-pytest-freezegun==0.4.2
-jupyterlab==4.5.0
-agster==1.12.0
+fefeefrrg==1.0
